@@ -38,3 +38,8 @@ if (n != "pop-result") then
   throw "invalid pop result"
 fi
 
+m = array("{a:10,b:{c:20}}")
+ma = {a:10,b:{c:20}}
+if (m != ma) then
+  throw "array error"
+endif
